// Vitest Snapshot v1

exports[`errorResponse > returns a correct value 1`] = `
{
  "body": "{\\"error\\":{\\"statusCode\\":500,\\"message\\":\\"Internal Server Error\\",\\"traceId\\":\\"dummyTraceId\\"}}",
  "statusCode": 500,
}
`;

exports[`errorResponse > when "description" is provided > returns a correct value 1`] = `
{
  "body": "{\\"error\\":{\\"statusCode\\":500,\\"message\\":\\"Internal Server Error\\",\\"traceId\\":\\"dummyTraceId\\",\\"description\\":\\"dummDescription\\"}}",
  "statusCode": 500,
}
`;

exports[`errorResponse > when "error" is provided > calls "console.error" with correct args 1`] = `
[
  [
    "[dummyTraceId]",
    [Error: dummyErrorMessage],
  ],
]
`;

exports[`errorResponse > when "error" is provided > when "exposeErrorMessage" is true > returns a correct value 1`] = `
{
  "body": "{\\"error\\":{\\"statusCode\\":500,\\"message\\":\\"Internal Server Error\\",\\"traceId\\":\\"dummyTraceId\\",\\"error\\":\\"Error: dummyErrorMessage\\"}}",
  "statusCode": 500,
}
`;

exports[`errorResponse > when "error" is provided > when "global.cdkContextEnv" is not "production" > returns a correct value 1`] = `
{
  "body": "{\\"error\\":{\\"statusCode\\":500,\\"message\\":\\"Internal Server Error\\",\\"traceId\\":\\"dummyTraceId\\",\\"error\\":\\"Error: dummyErrorMessage\\"}}",
  "statusCode": 500,
}
`;

exports[`errorResponse > when "statusCode" is provided > returns a correct value 1`] = `
{
  "body": "{\\"error\\":{\\"statusCode\\":418,\\"message\\":\\"I'm a teapot\\",\\"traceId\\":\\"dummyTraceId\\"}}",
  "statusCode": 418,
}
`;
